Bug 1982188 - Don't use the orient attribute to determine scrollbar direction. r=layout-reviewers,jfkthame
Checking for attribute presence is cheaper. Also stop propagating it to
slider / thumb. Slider doesn't use it, and thumb can just look at the
scrollbar.

Differential Revision: https://phabricator.services.mozilla.com/D260688

--- a/layout/style/res/scrollbars.css
+++ b/layout/style/res/scrollbars.css
@@ -114,7 +114,7 @@ thumb {
   appearance: auto;
   -moz-default-appearance: scrollbarthumb-horizontal;
 
-  &[orient="vertical"] {
+  scrollbar[vertical] & {
     -moz-default-appearance: scrollbarthumb-vertical;
   }
 
@@ -149,7 +149,7 @@ scrollbar {
     }
   }
 
-  &[orient="vertical"] {
+  &[vertical] {
     -moz-default-appearance: scrollbar-vertical;
   }
 
@@ -163,14 +163,14 @@ scrollbarbutton {
   appearance: auto;
   -moz-default-appearance: scrollbarbutton-right;
 
-  scrollbar[orient="vertical"] > & {
+  scrollbar[vertical] > & {
     -moz-default-appearance: scrollbarbutton-down;
   }
 
   &[type="decrement"] {
     -moz-default-appearance: scrollbarbutton-left;
 
-    scrollbar[orient="vertical"] > & {
+    scrollbar[vertical] > & {
       -moz-default-appearance: scrollbarbutton-up;
     }
   }
